# ObVi-SLAM-v2

./: CMakeLists.txt  README.md  run.sh
config/: config.yaml  orbslam_settings.yaml  sensors.yaml
config/glim/: config.json
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
include/obvi/: System.hpp  types.hpp
include/obvi/mapping/: SemanticGraph.hpp
include/obvi/odometry/: GlimOdom.hpp  OdomBase.hpp
python/: main.py  tracker.py  vo.py
python/common/: profiler.py  types.py
python/core/: dataset_loader.py  vis_3d.py  visualizer.py
python/obvi_slam/detectors/: base.py  yolo_wrapper.py
python/perception/: clustering.py  depth.py  detector.py  geometry.py  pipeline.py
src/: OrbSlamWrapper.cpp  OrbSlamWrapper.h  SlamKernel.cpp  SlamKernel.hpp  System.cpp  VisualOdometry.cpp  VisualOdometry.h  bindings.cpp
src/mapping/: SemanticGraph.cpp
src/odometry/: GlimOdom.cpp
